Fixed missing bracket in styles

--- a/example/index.html
+++ b/example/index.html
@@ -6,7 +6,7 @@
     <title>Touchy example</title>
 
     <style type="text/css" media="screen">
-      #eventarea { height:300px; widht:800px; background-color:#bbb; 
+      #eventarea { height:300px; widht:800px; background-color:#bbb; }
     </style>
     
   </head>
