Updated example file with new examples

--- a/example/index.html
+++ b/example/index.html
@@ -13,12 +13,8 @@
   <body>
     <h1>Tap, hold (longtouch) or swipe the area below</h1>
 
-    <div id="eventarea">
-      
-    </div>
-    <div id="resultarea">
-      
-    </div>
+    <div id="eventarea"></div>
+    <div id="resultarea"></div>
 
     <script src="../src/touchy.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" charset="utf-8">
