--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub">
         </a>
 
-        <script src="../src/touchy.js" type="text/javascript" charset="utf-8"></script>
+        <script src="touchy.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" charset="utf-8">
          (function() {
              var target = document.getElementById('eventarea'),
